Adding script and updating index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <link rel='stylesheet' href='style.css'>
 </head>
 
-<body></body>
+<body>
+    <div>
+        <p>
+            This is a test.
+        </p>
+    </div>
+</body>
 
 </html>
