--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 </head>
 
 <body>
+    <header>
+        <h1>This is a h1</h1>
+        <h3>This is an h3</h3>
+    </header>
     <div>
         <p>
             This is a test.
